img updates and wrap tag fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,7 @@ p {
   font-family: "Source Sans Pro", sans-serif;
   margin: 0px;
   font-size: 14px;
+  white-space: pre-wrap;
 }
 
 ul, ol {
@@ -404,6 +405,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 .timeline li .line-title {
   font-size: 16px;
   line-height: 6px;
+  white-space: pre-wrap;
 }
 
 .timeline li span {
@@ -415,6 +417,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 .timeline li .line-text {
   color: #888;
   line-height: 18px;
+  white-space: pre-wrap;
 }
 
 .timeline li:first-child:before {
@@ -484,7 +487,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .top-nav-collapse .navbar-brand img {
-  width: 65%;
+  width: 50%;
 }
 
 .top-nav-collapse .navbar-nav .nav-link {
